--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.3",
     "morgan": "~1.9.1"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "mocha": "^6.2.2"
   }
 }
