--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.3",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "react-navigation-drawer": "^2.3.3"
   },
   "devDependencies": {
     "chai": "^4.2.0",
